--- a/tut_py_2_0_operators.ipynb
+++ b/tut_py_2_0_operators.ipynb
@@ -17,14 +17,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11\n",
       "11\n"
      ]
     }
@@ -39,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -193,14 +192,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "False\n"
      ]
     }
    ],
@@ -215,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -352,26 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
-    }
-   ],
-   "source": [
-    "# is equal to\n",
-    "# a == b is False \n",
-    "print(x == y) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -383,9 +363,12 @@
     }
    ],
    "source": [
+    "# is equal to\n",
     "x = 15\n",
-    "y = 16\n",
-    "print(x != y) "
+    "y = 15\n",
+    "\n",
+    "# a == b is False \n",
+    "print(x == y) "
    ]
   },
   {
@@ -402,6 +385,25 @@
     }
    ],
    "source": [
+    "x = 16\n",
+    "y = 16\n",
+    "print(x != y) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
     "x = \"a\"\n",
     "y = \"d\"\n",
     "print(x > y) # for strings it performs lexicograph a < b < c < d...."
@@ -409,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -428,20 +430,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "False\n"
      ]
     }
    ],
    "source": [
-    "a = \"bonit\"\n",
-    "b = \"bob\"\n",
+    "a = \"bobit\"\n",
+    "b = \"boss\"\n",
     "print(a > b) # lexicograph"
    ]
   },
@@ -538,11 +540,11 @@
     "c = 12\n",
     "a = 3\n",
     "\n",
-    "# c = c + a\n",
-    "# print(c)\n",
+    "c = c + a\n",
+    "print(c)\n",
     "\n",
     "c += a  #--> c = c + a\n",
-    "print (c)"
+    "# print (c)"
    ]
   },
   {
@@ -633,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +671,7 @@
     "age = 25 \n",
     "income = 20000\n",
     "res = age > 20 and income > 30000\n",
-    "# res = age > 20 and income < 2000\n",
+    "# res = age > 20 and income < 200000\n",
     "\n",
     "print(res)"
    ]
