--- a/tut_py_1_print.ipynb
+++ b/tut_py_1_print.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "id": "e724929f-5c74-4032-aa07-f4e32aaadc65",
    "metadata": {
     "colab": {
@@ -58,6 +58,7 @@
      "text": [
       "1 Hello world\n",
       "1 Hello world\n",
+      "'1 Hello world'\n",
       "2 Hello world. Today its raining.\n",
       "3 Hello world. Today its raining.\n",
       "4 Hello world. Today its raining. It is going to be humid today. Good luck\n"
@@ -67,8 +68,10 @@
    "source": [
     "print(\"1 Hello world\") # octothorpe or hashtag\n",
     "print('1 Hello world') # using single quote\n",
+    "print(\"'1 Hello world'\") # octothorpe or hashtag\n",
     "\n",
-    "# using , to print series of stmts \n",
+    "\n",
+    "# using comma , to print series of stmts \n",
     "print(\"2 Hello world. Today its raining.\")\n",
     "print(\"3 Hello world.\", \"Today its raining.\")\n",
     "print(\"4 Hello world.\", \"Today its raining.\", \"It is going to be humid today.\", \"Good luck\")"
@@ -250,6 +253,7 @@
     }
    ],
    "source": [
+    "# use sep to insert seperator between strings: \\t \\n\n",
     "print(\"Hello\", \"how are you?\", \"I am doing good.\", sep=\"...\")"
    ]
   },
@@ -291,7 +295,7 @@
     }
    ],
    "source": [
-    "\n",
+    "# Now I want to override the default end line char \\n\n",
     "print(\"This is a line.\")\n",
     "print(\"This is another line.\")\n",
     "print(\"This is another another line.\")\n",
@@ -401,7 +405,7 @@
     "wt = 4.3 # an float variable\n",
     "\n",
     "# print(\"Hello. My name is {name}. My brother name is {brother}. My age is {age}. My weight is {wt}\")\n",
-    "print(f\"Hello. My name is {name}. My brother name is {brother}. My age is {age}. My weight is {wt}\") "
+    "print(f\"Hello. My name is {name}. My brother name is {brother}. My age is {age}. My weight is {wt}\") # var should be in {} braces"
    ]
   },
   {
@@ -520,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "86c6d458-1592-4966-a2d0-ec3631b743ce",
    "metadata": {},
    "outputs": [
@@ -529,13 +533,25 @@
      "output_type": "stream",
      "text": [
       "############\n",
-      "Success rate: 85.8%\n"
+      "Success rate: 85.8%\n",
+      "S.No. | rate\n",
+      "1     |  10.12\n",
+      "2     |  20.25\n",
+      "3     |  30.37\n",
+      "4     |  40.49\n",
+      "5     |  50.62\n",
+      "6     |  60.74\n",
+      "7     |  70.86\n",
+      "8     |  80.99\n",
+      "9     |  91.11\n",
+      "10    | 101.23\n",
+      "11    | 111.36\n"
      ]
     }
    ],
    "source": [
-    "number = 3.14159\n",
-    "# print(f\"The number is {number}\")\n",
+    "number = 3.14159 # use 22/7or \n",
+    "# print(f\"The number is {n # use 22/7or umber}\")\n",
     "# print(f\"The number is {number:.2f}\")\n",
     "\n",
     "# print(\"############\")\n",
@@ -549,7 +565,8 @@
     "# print(\"############OPTIONAL#######\")\n",
     "# # left-aligns the integer i within 5 characters; right-aligns the float value within 6 characters, formatted to two decimal places.\n",
     "# # print(\"1234567890123456789\")\n",
-    "# for i in range(1, 4):\n",
+    "# print(\"S.No. | rate\")\n",
+    "# for i in range(1, 12):\n",
     "#     value = i * 10.1234\n",
     "#     print(f\"{i:<5} | {value:>6.2f}\") \n"
    ]
@@ -613,6 +630,7 @@
     "\n",
     "# print('It's a zenith') # Throws error\n",
     "# print('It\\'s a zenith') # It's a zenith\n",
+    "# print('It is\\b a zenith')\n",
     "\n",
     "# print(\"He said, \\\"You turned vermillion\\\"\")\n",
     "\n",
@@ -714,14 +732,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "id": "2dd4139f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# you can also print to file\n",
     "f = open('output.txt', 'w')  # Open the file in write mode\n",
+    "\n",
     "print(\"Hello, world!\", file=f)  # Print to the file\n",
+    "print(\"This is my first program in python\", file=f)\n",
+    "\n",
     "f.close()  # Don't forget to close the file"
    ]
   },
@@ -729,14 +750,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8713bd82-ab2c-41ee-93eb-7d28880978a6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ebaff0e6-80e5-49ba-a54d-b07cdd6077d7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -761,7 +774,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
