--- a/tut_py_2_0_operators.ipynb
+++ b/tut_py_2_0_operators.ipynb
@@ -50,9 +50,9 @@
     }
    ],
    "source": [
-    "#or I can print addition like this\n",
-    "x=6\n",
-    "y=5\n",
+    "#or I can print addition without using variable res\n",
+    "x = 6\n",
+    "y = 5\n",
     "print(x+y)"
    ]
   },
@@ -188,6 +188,25 @@
    "source": [
     "### Comparison Operators <,<=,>,>=,==,!=\n",
     "- always returns **boolean variable**: True or False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(True)\n",
+    "print(False)"
    ]
   },
   {
@@ -635,6 +654,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(True  and True)\n",
+    "print(True  and False)\n",
+    "print(False and True)\n",
+    "print(False and False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
@@ -678,6 +720,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(True  or True)\n",
+    "print(True  or False)\n",
+    "print(False or True)\n",
+    "print(False or False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -693,6 +758,50 @@
     "age = 5\n",
     "\n",
     "b = age < 30 or age > 60 # determine if age is out range [30 to 60]\n",
+    "\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = 5\n",
+    "name = 'jerry'\n",
+    "\n",
+    "b = age < 30 or name == 'tinku' \n",
+    "\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "user = \"ash\"\n",
+    "password = \"@secret))\"\n",
+    "\n",
+    "b = (user == 'admin' or user == 'jerry') \n",
     "\n",
     "print(b)"
    ]
@@ -770,35 +879,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n",
       "True\n",
       "False\n",
       "True\n",
-      "True\n"
+      "False\n"
      ]
     }
    ],
    "source": [
-    "a = True\n",
-    "b = False\n",
-    "  \n",
-    "# Print a and b is False \n",
-    "print(a and b) \n",
-    "  \n",
-    "# Print a or b is True \n",
-    "print(a or b) \n",
-    "  \n",
     "# Print not a is False \n",
+    "print(True)\n",
     "print(not True)\n",
     "print(not False)\n",
-    "print(not b)\n"
+    "\n",
+    "a = True\n",
+    "print(not a)\n"
    ]
   },
   {
@@ -1342,7 +1444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
