--- a/tut_py_1_print.ipynb
+++ b/tut_py_1_print.ipynb
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "accf14af-ee29-4325-8870-ed5a846fc0c3",
    "metadata": {
     "colab": {
@@ -346,7 +346,7 @@
    ],
    "source": [
     "# style 1) Printing Multiple Values\n",
-    "person  = \"Alice\"    # name is a str variable with value Alice, \n",
+    "person  = \"Alice\"    # person is a str variable with value Alice, \n",
     "brother = \"Rahim\"    # brother is a str variable with value Rahim\n",
     "age     = 10         # age is a int variable with value 10\n",
     "wt      = 4.3        # wt is a float variable with value 4.3\n",
@@ -360,9 +360,11 @@
     "# print(person, brother)\n",
     "# print(person, brother, age, wt)\n",
     "# print(\"person, brother, age, wt\")\n",
+    "# print(person, brother, age, wt, sep=\";\")\n",
     "\n",
     "\n",
-    "# Lets print a meaning statement\n",
+    "\n",
+    "# Lets print a meaningful statement\n",
     "print(\"Hello. My name is\", person, \". My brothers name is\", brother, \". My age is\", age, \". My weight is\", wt)"
    ]
   },
@@ -465,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "86c6d458-1592-4966-a2d0-ec3631b743ce",
    "metadata": {},
    "outputs": [
@@ -490,6 +492,7 @@
     "\n",
     "# print(\"############\")\n",
     "# ratio = 0.857573\n",
+    "# print(f\"Success rate: {ratio}\")\n",
     "# print(f\"Success rate: {ratio:.1%}\")\n",
     "# print(f\"Success rate: {ratio:.3%}\")\n",
     "\n",
