--- a/tut_py_2_type_part1_numeric_str_list_tuple.ipynb
+++ b/tut_py_2_type_part1_numeric_str_list_tuple.ipynb
@@ -423,7 +423,7 @@
    "source": [
     "### 2️. List (list) Operations\n",
     "- A list is an **ordered, mutable** collection of elements.\n",
-    "- can contain duplicates\n",
+    "- can contain **duplicates**\n",
     "- are heterogenous (can contain elements of different kind)"
    ]
   },
@@ -444,7 +444,7 @@
    ],
    "source": [
     "# List declaration\n",
-    "age = [10, 20, 30, 40, 50] \n",
+    "age = [10, 20, 30, 40, 50, 20, 30] \n",
     "\n",
     "print(age)\n",
     "print(type(age))\n",
@@ -775,7 +775,7 @@
     }
    ],
    "source": [
-    "# lets create a list of 12 consecutive int\n",
+    "#MISCELLANEOUS: lets create a list of 12 consecutive int starting with 1\n",
     "l = list(range(1,13))\n",
     "print(f\"range: {l}\")\n",
     "\n",
@@ -981,9 +981,10 @@
    "metadata": {},
    "source": [
     "### 3️. Tuple (tuple) Operations\n",
-    "- A tuple is an ordered, immutable collection of elements.\n",
-    "- can contain duplicates\n",
-    "- are heterogenous (can contain elements of different kind)"
+    "- A tuple is an **ordered, immutable** collection of elements.\n",
+    "- slightly faster than list and ideal when **data remains fixed**\n",
+    "- can contain **duplicates**\n",
+    "- are heterogenous (can contain elements of different kind)\n"
    ]
   },
   {
@@ -1240,7 +1241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
