--- a/tut_py_2_type_part2_conditional_ifelse.ipynb
+++ b/tut_py_2_type_part2_conditional_ifelse.ipynb
@@ -192,42 +192,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e4bd387-5b56-4c76-b0fa-63e43ae599ba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### FIX ME\n",
-    "# marks = 85\n",
-    "\n",
-    "# if 100 <= marks <= 90:\n",
-    "#     print(\"Grade: A\")\n",
-    "#     print(\"Congratulations. Your parents would be proud\")\n",
-    "    \n",
-    "# elif 90 < marks <= 80:\n",
-    "#     print(\"Grade: B\")\n",
-    "#     print(\"Good work\")\n",
-    "    \n",
-    "# elif 80 < marks <= 70:\n",
-    "#     print(\"Grade: C\")\n",
-    "#     print(\"Good work, but you can  do better\")\n",
-    "    \n",
-    "# elif 70 < marks <= 60:\n",
-    "#     print(\"Grade: D\")\n",
-    "#     print(\"Buddy whats going on ? I have confidence that u can do better\")\n",
-    "    \n",
-    "# else:\n",
-    "#     print(\"Grade: F\")\n",
-    "#     print(\"Buddy wake up. Start studying.\")\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "f365f1f3-f9d1-4a18-a3e5-8a26dd661abc",
    "metadata": {},
    "source": [
-    "# if with 'and' 'or'"
+    "# if + and + or"
    ]
   },
   {
@@ -468,7 +437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
