--- a/tut_py_2_type_part4_dict_set.ipynb
+++ b/tut_py_2_type_part4_dict_set.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "78e344a7-c5f8-4225-90a9-d56dfb8e5bda",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Alice': 85, 'James': 92, 'Rahim': 88}\n",
+      "{'Ram': 85, 'Carlos': 92, 'Roman': 78}\n",
       "<class 'dict'>\n"
      ]
     }
@@ -68,9 +68,9 @@
    "source": [
     "# creating dict: style2\n",
     "student_scores = {}\n",
-    "student_scores['Alice'] = 85\n",
-    "student_scores['James'] = 92\n",
-    "student_scores['Rahim'] = 88\n",
+    "student_scores['Ram'] = 85\n",
+    "student_scores['Carlos'] = 92\n",
+    "student_scores['Roman'] = 78\n",
     "\n",
     "print(student_scores)\n",
     "print(type(student_scores))"
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "2ea4fc56-44d2-4ae6-9b68-cec71728c280",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Alice': 85, 'James': 92, 'Rahim': 88}\n",
+      "{'Ram': 85, 'Carlos': 92, 'Roman': 78}\n",
       "<class 'dict'>\n"
      ]
     }
@@ -94,19 +94,20 @@
    "source": [
     "# optional\n",
     "# creating dict: style3\n",
+    "l = [\n",
+    "    ('Ram',85),\n",
+    "    ('Carlos',92),\n",
+    "    ('Roman', 78)\n",
+    "]\n",
     "\n",
-    "student_scores = dict( [\n",
-    "    ('Alice',85),\n",
-    "    ('James',92),\n",
-    "    ('Rahim', 88)]\n",
-    ")\n",
+    "student_scores = dict(l)\n",
     "print(student_scores)\n",
     "print(type(student_scores))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "3d485ea5-36ef-4ecd-be6f-c639004c769e",
    "metadata": {},
    "outputs": [
@@ -114,15 +115,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Alice': 85, 'James': 92, 'Rahim': 88}\n"
+      "{'Ram': 85, 'Carlos': 92, 'Roman': 78}\n"
      ]
     }
    ],
    "source": [
     "# Optional\n",
     "# creating dict: style4 (Using dict with zip()) \n",
-    "names = [\"Alice\", \"James\", \"Rahim\"]\n",
-    "scores = [85, 92, 88]\n",
+    "names = [\"Ram\", \"Carlos\", \"Roman\"]\n",
+    "scores = [85, 92, 78]\n",
     "\n",
     "student_scores = dict(zip(names, scores))\n",
     "\n",
@@ -147,17 +148,18 @@
    "source": [
     "# Accessing values using keys\n",
     "\n",
-    "student_scores = {\"Alice\": 85, \n",
+    "student_scores = {\"Surendar\": 85, \n",
     "                  \"Bob\": 92,\n",
-    "                  \"Charlie\": 78}\n",
+    "                  \"Tanner\": 78\n",
+    "}\n",
     "\n",
-    "print(student_scores[\"Alice\"])  # Output: 85\n",
+    "print(student_scores[\"Surendar\"])  # Output: 85\n",
     "print(student_scores.get(\"Bob\"))  # Output: 92"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "id": "d153e57d-89be-48f9-8dd3-65f7942c8df8",
    "metadata": {},
    "outputs": [
@@ -165,7 +167,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['Alice', 'Bob', 'Charlie'])\n"
+      "dict_keys(['Surendar', 'Bob', 'Tanner'])\n"
      ]
     }
    ],
@@ -177,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "id": "f238d10c-9440-4c00-b624-4c68d692e4fe",
    "metadata": {},
    "outputs": [
@@ -197,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "id": "b9ce7070-cb13-406e-835d-3bf98753d0e3",
    "metadata": {},
    "outputs": [
@@ -205,7 +207,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_items([('Alice', 85), ('Bob', 92), ('Charlie', 78)])\n"
+      "dict_items([('Surendar', 85), ('Bob', 92), ('Tanner', 78)])\n"
      ]
     }
    ],
@@ -216,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "c1f0928f-f7b2-4515-aad6-c90477fd048c",
    "metadata": {},
    "outputs": [
@@ -229,7 +231,7 @@
     }
    ],
    "source": [
-    "print(len(my_dict))"
+    "print(len(student_scores))"
    ]
   },
   {
@@ -243,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "id": "4b035212-e669-4f6c-bed7-bc4f4072f7cd",
    "metadata": {},
    "outputs": [
@@ -251,8 +253,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "after adding:{'Alice': 85, 'Bob': 92, 'Charlie': 78, 'David': 88}\n",
-      "after update:{'Alice': 90, 'Bob': 92, 'Charlie': 78, 'David': 88}\n"
+      "before adding:{'Surendar': 85, 'Bob': 92, 'Tanner': 78}\n",
+      "after adding:{'Surendar': 85, 'Bob': 92, 'Tanner': 78, 'David': 88}\n",
+      "after update:{'Surendar': 90, 'Bob': 92, 'Tanner': 78, 'David': 88}\n"
      ]
     }
    ],
@@ -261,7 +264,7 @@
     "student_scores[\"David\"] = 88  # Adding new key-value pair\n",
     "print(f\"after adding:{student_scores}\")\n",
     "\n",
-    "student_scores[\"Alice\"] = 90  # Updating value\n",
+    "student_scores[\"Surendar\"] = 90  # Updating value\n",
     "print(f\"after update:{student_scores}\")"
    ]
   },
@@ -276,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "0bd422bb-8be7-4a10-8d97-d074b9117eaf",
    "metadata": {},
    "outputs": [
@@ -284,9 +287,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Alice: 85\n",
+      "Surendar: 90\n",
       "Bob: 92\n",
-      "Charlie: 78\n",
+      "Tanner: 78\n",
+      "David: 88\n",
       "Done\n"
      ]
     }
@@ -309,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 18,
    "id": "788af760-a3dd-4547-8941-d3c22e8b414b",
    "metadata": {},
    "outputs": [
@@ -322,6 +326,11 @@
     }
    ],
    "source": [
+    "student_scores = {\"Surendar\": 85, \n",
+    "                  \"Bob\": 92,\n",
+    "                  \"Tanner\": 78\n",
+    "}\n",
+    "\n",
     "if \"Eve\" in student_scores:\n",
     "    print(\"Eve's score is available.\")\n",
     "else:\n",
@@ -339,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 17,
    "id": "e347c87a-ae6c-4ce4-bc01-52d2fb202144",
    "metadata": {},
    "outputs": [
@@ -347,19 +356,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Alice': 90, 'Bob': 92, 'David': 88}\n"
+      "{'Surendar': 85, 'Tanner': 78}\n"
      ]
     }
    ],
    "source": [
     "# remove style1\n",
-    "student_scores.pop(\"Charlie\")  # Remove Charlie\n",
+    "student_scores = {\"Surendar\": 85, \n",
+    "                  \"Bob\": 92,\n",
+    "                  \"Tanner\": 78\n",
+    "}\n",
+    "student_scores.pop(\"Bob\")  # Remove Charlie\n",
     "print(student_scores)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 19,
    "id": "5c5d1e1e-ad21-4947-853c-a76b718bf0e5",
    "metadata": {},
    "outputs": [
@@ -367,15 +380,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Alice': 85, 'Charlie': 78}\n"
+      "{'Surendar': 85, 'Tanner': 78}\n"
      ]
     }
    ],
    "source": [
     "# remove style2\n",
-    "student_scores = {\"Alice\": 85, \n",
+    "student_scores = {\"Surendar\": 85, \n",
     "                  \"Bob\": 92,\n",
-    "                  \"Charlie\": 78\n",
+    "                  \"Tanner\": 78\n",
     "}\n",
     "del student_scores['Bob']\n",
     "print(student_scores)"
@@ -383,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 20,
    "id": "b8a2c3e6-1b0d-4490-a48c-b5f86fd17407",
    "metadata": {},
    "outputs": [
@@ -397,9 +410,9 @@
    ],
    "source": [
     "# remove style3: remove all entries\n",
-    "student_scores = {\"Alice\": 85, \n",
+    "student_scores = {\"Surendar\": 85, \n",
     "                  \"Bob\": 92,\n",
-    "                  \"Charlie\": 78\n",
+    "                  \"Tanner\": 78\n",
     "}\n",
     "student_scores.clear()\n",
     "print(student_scores)"
@@ -416,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "50a62c0f-d2f9-4be9-af85-0a8cd64d4d0c",
    "metadata": {},
    "outputs": [
@@ -424,21 +437,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Alice': [50, 1.7, 'Kerala'], 'bob': [43, 1.3, 'Delhi'], 'Charlie': [32, 1.8, 'noida']}\n",
-      "[43, 1.3, 'Delhi']\n",
-      "1.3\n"
+      "{'Swamy': [50, 1.7, 'Kerala'], 'Tinku': [43, 1.3, 'Delhi'], 'Happy': [32, 1.8, 'noida']}\n",
+      "[32, 1.8, 'noida']\n",
+      "1.8\n"
      ]
     }
    ],
    "source": [
     "students = { # key=name, value=[age,height,location]\n",
-    "    \"Alice\":  [50,1.7,\"Kerala\"],\n",
-    "    \"bob\"  :  [43,1.3,\"Delhi\"],\n",
-    "    \"Charlie\":[32, 1.8, \"noida\"]\n",
+    "    \"Swamy\":  [50,1.7,\"Kerala\"],\n",
+    "    \"Tinku\"  :  [43,1.3,\"Delhi\"],\n",
+    "    \"Happy\":[32, 1.8, \"noida\"]\n",
     "}\n",
     "print(students)\n",
-    "print(students['bob'])\n",
-    "print(students['bob'][1])"
+    "print(students['Happy'])\n",
+    "print(students['Happy'][1])"
    ]
   },
   {
@@ -881,7 +894,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
