--- a/tut_py_2_type_part3_loop_for_range_listcomprehension_while_break_continue.ipynb
+++ b/tut_py_2_type_part3_loop_for_range_listcomprehension_while_break_continue.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "de9d4088-3424-4b40-b27f-b8521a329737",
    "metadata": {},
    "outputs": [
@@ -30,28 +30,7 @@
       "hello\n",
       "hello\n",
       "hello\n",
-      "helloo\n"
-     ]
-    }
-   ],
-   "source": [
-    "# suppose we want to print hello 4 times:\n",
-    "print(\"hello\")\n",
-    "print(\"hello\")\n",
-    "print(\"hello\")\n",
-    "print(\"hello\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "80f57696-6852-4cae-a0c4-28e84b85da9a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "hello\n",
       "hello\n",
       "hello\n",
       "hello\n",
@@ -60,7 +39,15 @@
     }
    ],
    "source": [
-    "# Or I can print using for loop\n",
+    "# step1: suppose we want to print hello 4 times:\n",
+    "print(\"hello\")\n",
+    "print(\"hello\")\n",
+    "print(\"hello\")\n",
+    "print(\"hello\")\n",
+    "\n",
+    "#######################\n",
+    "\n",
+    "# step2: Or I can print using for loop\n",
     "for i in [0,1,2,3]: \n",
     "    print(\"hello\")"
    ]
@@ -262,7 +249,8 @@
    "id": "466aa290",
    "metadata": {},
    "source": [
-    "# Range"
+    "# Range\n",
+    "### generally used with for loop"
    ]
   },
   {
@@ -404,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "062158cb-a0f3-412f-9566-478694ffd0ff",
    "metadata": {},
    "outputs": [
@@ -433,8 +421,8 @@
     "\n",
     "# method1\n",
     "for i in numbers: \n",
-    "    square = i ** 2 # ** exponent operator\n",
-    "    print(f\"Square of {i} is: {square}\")\n",
+    "    result = i ** 2 # ** exponent operator\n",
+    "    print(f\"Square of {i} is: {result}\")\n",
     "print(\"##################\")\n",
     "\n",
     "# method2: remove the temporary variable\n",
@@ -452,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "b02351bb-9c73-4423-a455-d3bde8d3894e",
    "metadata": {},
    "outputs": [
@@ -461,12 +449,12 @@
      "output_type": "stream",
      "text": [
       "The initial result: []\n",
-      "[8]\n",
-      "[8, 18]\n",
-      "[8, 18, 6]\n",
-      "[8, 18, 6, -14]\n",
-      "[8, 18, 6, -14, 10]\n",
-      "The final result: [8, 18, 6, -14, 10]\n",
+      "8\n",
+      "18\n",
+      "6\n",
+      "-14\n",
+      "10\n",
+      "The final result: 10\n",
       "The initial result: []\n",
       "[8]\n",
       "[8, 18]\n",
@@ -483,18 +471,18 @@
     "\n",
     "#STEP1: First lets just print the multiples of 2\n",
     "# for n in numbers:\n",
-    "#     scaled_n = n*2\n",
-    "#     print(scaled_n)\n",
+    "#     res = n*2\n",
+    "#     print(res)\n",
     "\n",
     "#STEP2: Now capture above values and store in an empty list\n",
     "result = []\n",
     "print(f\"The initial result: {result}\")\n",
     "for n in numbers:\n",
-    "    scaled_n = n*2\n",
-    "    result.append(scaled_n)\n",
-    "    print(result)\n",
+    "    res = n*2\n",
+    "    result.append(res)\n",
+    "    print(res)\n",
     "\n",
-    "print(f\"The final result: {result}\")\n",
+    "print(f\"The final result: {res}\")\n",
     "\n",
     "#STEP3: optimize...do not use extra variable scaled_n\n",
     "result = []\n",
@@ -1143,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "7863f0d2-47c2-44f3-8caf-519ca6e0a83f",
    "metadata": {},
    "outputs": [
