--- a/tut_py_1_print.ipynb
+++ b/tut_py_1_print.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "7239c5f0-d85b-47ed-9d21-55ad55668a44",
+   "metadata": {},
+   "source": [
+    "# print\n",
+    "- **built-in function** that sends the specified values to the standard output device (usually the console or terminal)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "41f90248-9f29-492e-8bb9-07b88cc7e03c",
    "metadata": {
     "id": "41f90248-9f29-492e-8bb9-07b88cc7e03c"
@@ -12,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e724929f-5c74-4032-aa07-f4e32aaadc65",
    "metadata": {
     "colab": {
@@ -26,9 +35,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "1 Hello world\n",
       "1 Hello world\n",
-      "'1 Hello world'\n",
+      "The gentleman said, '1 Hello world'\n",
       "2 Hello world. Today its raining.\n",
       "3 Hello world. Today its raining.\n",
       "4 Hello world. Today its raining. It is going to be humid today. Good luck\n"
@@ -39,7 +49,7 @@
     "print()\n",
     "print(\"1 Hello world\") # octothorpe or hashtag\n",
     "print('1 Hello world') # using single quote\n",
-    "print(\"This is in quotes: '1 Hello world'\") # octothorpe or hashtag\n",
+    "print(\"The gentleman said, '1 Hello world'\") # single quote inside a double quote\n",
     "\n",
     "\n",
     "# using comma , to print series of stmts \n",
@@ -84,7 +94,7 @@
     }
    ],
    "source": [
-    "# I get error: Not a multiline message\n",
+    "# Solution that is wrong: I get error: Not a multiline message\n",
     "print(\"The universe is a vast and mysterious expanse, stretching far beyond\n",
     "what our eyes can see. It's filled with billions of galaxies, each holding stars,\n",
     "planets, and secrets waiting to be discovered. From black holes that warp time \n",
@@ -153,7 +163,15 @@
     }
    ],
    "source": [
-    "# Printing Multiple Lines Using Triple Quotes\n",
+    "# Method1:\n",
+    "print(\"Beneath the stars, the night wind sings,\")\n",
+    "print(\"Of quiet dreams and silver wings.\")\n",
+    "print(\"The moonlight dances on the sea,\")\n",
+    "print(\"A gentle world, so wild and free.\")\n",
+    "print(\"In silence, peace begins to grow.\")\n",
+    "\n",
+    "\n",
+    "#Method2: Printing Multiple Lines Using Triple Quotes\n",
     "print(\"\"\"Beneath the stars, the night wind sings,\n",
     "Of quiet dreams and silver wings.\n",
     "The moonlight dances on the sea,\n",
@@ -288,9 +306,9 @@
     "print(\"How are you?\", end=\" \")\n",
     "print(\"I am doing good.\", end=\" \")\n",
     "\n",
-    "# print(\"Hello.\", end=\"\\n\") # DEFAULT is newline \\n\n",
-    "# print(\"How are you?\", end=\"\\n\")\n",
-    "# print(\"I am doing good.\", end=\"\\n\")\n"
+    "# print(\"Hello.\", end=\";\") # DEFAULT is end is newline \\n\n",
+    "# print(\"How are you?\", end=\";\")\n",
+    "# print(\"I am doing good.\", end=\";\")\n"
    ]
   },
   {
@@ -484,7 +502,7 @@
     "# n = 3.14159 # use 22/7\n",
     "# print(f\"The number is {n}\") \n",
     "# print(f\"The number is {n:.2f}\")\n",
-    "# print(f\"The number is {n:.3f}\")\n",
+    "# print(f\"The number is {n:.3f}\") # rounds off\n",
     "\n",
     "# print(\"############\")\n",
     "# n = 1234567.8912 # represents money,etc\n",
@@ -600,12 +618,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62eb13ce-2334-4347-9527-af7e8b30128b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edcd1f84-743f-494f-90e0-53a05bc8e792",
+   "metadata": {},
+   "source": [
+    "# STOP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05a5ba4c-d338-4cb0-9370-b35610b97848",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8461229a-5774-4d5c-827b-845cc8a63d0b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b59af8eb-06f1-4813-9a04-37b84a2d2471",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "fd504bc9-c9eb-42a6-9dd5-4d9da0638373",
    "metadata": {},
    "source": [
     "# extra"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0af087e-0a3c-485e-82cb-aea476ab3afd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
