--- a/tut_py_2_0_operators.ipynb
+++ b/tut_py_2_0_operators.ipynb
@@ -397,7 +397,7 @@
     "x = 15\n",
     "y = 15\n",
     "\n",
-    "# a == b is False \n",
+    "# x == y is False \n",
     "print(x == y) "
    ]
   },
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -606,13 +606,16 @@
     }
    ],
    "source": [
+    "c = 12\n",
+    "a = 3\n",
+    "\n",
     "c -= a  #--> c = c - a\n",
     "print (c)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -624,6 +627,9 @@
     }
    ],
    "source": [
+    "c = 12\n",
+    "a = 3\n",
+    "\n",
     "c *= a # c = c * a\n",
     "print(c)"
    ]
@@ -681,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +705,7 @@
     }
    ],
    "source": [
-    "# and operator: every single condition should be True for it to return True\n",
+    "# and operator: if every single condition is True then it will return True, else it will return False \n",
     "print(True  and True)\n",
     "print(True  and False)\n",
     "print(False and True)\n",
@@ -753,14 +759,14 @@
     "income = 20000\n",
     "\n",
     "# res = age > 20 and income > 15000 # True and True\n",
-    "res = age > 30 and income < 150000 # False and False\n",
+    "res = age > 30 and income < 15000 # False and False\n",
     "\n",
     "print(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +785,7 @@
     }
    ],
    "source": [
-    "# or condition: a single condition should be True for it to return True\n",
+    "# or condition: if a single condition is True then  it will return True else it will return False\n",
     "print(True  or True)\n",
     "print(True  or False)\n",
     "print(False or True)\n",
