--- a/tut_py_1_print.ipynb
+++ b/tut_py_1_print.ipynb
@@ -378,6 +378,7 @@
     "# print(person, brother)\n",
     "# print(person, brother, age, wt)\n",
     "# print(\"person, brother, age, wt\")\n",
+    "# print(person, brother, \"age\", wt)\n",
     "# print(person, brother, age, wt, sep=\";\")\n",
     "\n",
     "\n",
@@ -571,7 +572,7 @@
     "# print special character using \\ backslash\n",
     "print(\"HelloWorld!\")\n",
     "# print(\"Hello\\nWorld!\") # newline \\n\n",
-    "# print(\"Hello World\\nGood Morning. \\n Hope you hade good sleep\")  # Newline \\n\n",
+    "# print(\"Hello World\\nGood Morning. \\n Hope you had good sleep\")  # Newline \\n\n",
     "# print(\"#############################\")\n",
     "# print(\"How     are     you     Rahim!\")  # Tab \\t\n",
     "# print(\"How\\tare\\tyou\\tRahim!\")  # Tab \\t\n",
@@ -853,7 +854,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
